<?xml version="1.0" encoding="utf-8"?>


<com.google.android.material.card.MaterialCardView
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="5dp"
    android:id="@+id/carView"
    app:cardElevation="5dp"
    app:cardCornerRadius="4dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
    <ImageView
        android:id="@+id/detailPoster"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        tools:srcCompat="@tools:sample/avatars"
        android:contentDescription="@string/poster_image"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/tvTitle"
            android:padding="2dp"
            android:gravity="center_horizontal"
            android:text="@string/title"
            android:textSize="14sp"
            android:textAppearance="?attr/textAppearanceHeadline6" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:textSize="12sp"
            android:text="@string/desc"
            android:id="@+id/detailDesc"
            android:textAppearance="?attr/textAppearanceBody2"
            />
    </LinearLayout>
    </LinearLayout>
    </ScrollView>
</com.google.android.material.card.MaterialCardView>
