<resources>
    <string name="app_name">Movies App</string>
    <string name="title_tv">TV Show</string>
    <string name="title_movie">Movies</string>
    <string name="title">title</string>
    <string name="desc">Desc</string>
    <string name="poster_image">Poster Image</string>
    <string name="year">Year</string>

</resources>